[package]
name = "relay"
version = "0.1.0"
edition = "2021"
publish = false
description = "HTTP relay for AWS Lambda."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/pillargg/relay"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["aws", "lambda", "http"]
categories = ["web-programming::http-client", "network-programming"]

[features]

[dependencies]
lambda_http = "0.4.1"
tokio = "1.13.0"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["native-tls"]

[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# strip = "symbols"
