[package]
name = "relay"
version = "1.0.0"
edition = "2021"
publish = false
description = "HTTP relay for AWS Lambda."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/pillargg/relay"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["aws", "lambda", "http"]
categories = ["web-programming::http-client", "network-programming"]

[features]

[dependencies]
bytes = "1"
lambda_http = "0.4.1"
reqwest = "0.11.6"
tokio = "1"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

[dev-dependencies]
mockito = "0.30.0"

[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# strip = "symbols"
