[package]
name = "relay"
version = "1.0.0"
edition = "2021"
publish = false
description = "HTTP relay for AWS Lambda."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/pillargg/relay"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["aws", "lambda", "http"]
categories = ["web-programming::http-client", "network-programming"]

[features]

[dependencies]
bytes = "1.1.0"
lambda_http = "0.4.1"
tokio = "1.15.0"
lazy_static = "1.4.0"

[dependencies.reqwest]
version = "0.11.8"
default-features = false
features = ["rustls-tls"]

[dependencies.tracing]
version = "0.1.29"
features = ["attributes"]

[dependencies.tracing-subscriber]
version = "0.3.2"
features = ["fmt", "parking_lot"]

[dev-dependencies]
wiremock = "0.5.8"

[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# strip = "symbols"
