[package]
name = "test-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.tiny_http]
version = "0.9.0"
# features = ["ssl"]

[dependencies.tracing]
version = "0.1.29"
features = ["attributes"]

[dependencies.tracing-subscriber]
version = "0.3.2"
features = ["fmt", "parking_lot"]
